@@ -1,6 +1,6 @@
 AUX netemul-pro.patch 1172 RMD160 f1465ad7a26e34f562e3b66b2ae47758ab7f5a16 SHA1 3a9b4ae71e03d4815acd810ad7511e44c7c92185 SHA256 7f0cc537608c56149f4e7d2afae994dd9a058b6fd95f908add2c9e3c6e62428f
 AUX netemul.desktop 364 RMD160 533d30626a5e935ddd0896f2c095614f40cf937d SHA1 bce09398e84c61c51fff65230f647ee97a9edc34 SHA256 08cac20139dbe769279367a309405dde1df697bb9d6fd2aa39c7800ff6d64528
 DIST netemul-0.9.8.tar.gz 1568685 RMD160 d860c4f5bb8db891dedd71e6a4e860bb45129a1d SHA1 68e5a0002668ad98b611063d6c38e614311150c8 SHA256 339ba9650822349b1485cb03ce610daa7ee2ae78fe129eed0ae368bba3603e45
-EBUILD netemul-0.9.8.ebuild 859 RMD160 98476e5704669dcc78355fb0a867b7356971df4e SHA1 825ba668991c1680825b36117c17ec0bed965e4f SHA256 793e75e49443904625637089667022174bd7dd32df41c2bc3e15b357a6377d0a
-MISC ChangeLog 268 RMD160 a9cfd32bdad1a5b58866b3c97cc9ffb59ad4d72e SHA1 cba31c4d42998b0fffd7ce9fc7351b75c9d3322b SHA256 43eae742dd3c3c5dd54526845c637759fc36ca52fa4cef1f18cf1cc70408864b
+EBUILD netemul-0.9.8.ebuild 922 RMD160 0504aef5bd35d8c144c586cad42c5de9fbd7a2cb SHA1 f6638669bccd096ed3e95fce33d995c62cbc2c78 SHA256 4bc0fe5026f2c23d31a3cf88f936e1205be4614e6e3463fce5d106602c021155
+MISC ChangeLog 378 RMD160 916764ef0f1c3862ed56fdf7ce8fbabb28806f18 SHA1 d7b6daf4fb31277412d3eabbf9fcbb7522589634 SHA256 043557233bd27d4c59e4685edb2afb438ec63544ad16c7c7f0bdd5dc9254a487
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
