@@ -3,6 +3,8 @@ AUX dbi_finish.patch 293 RMD160 7178dee7a8f250733510feb9ffdbe6bd9b044429 SHA1 a4
 AUX postinstall-en-2.txt 661 RMD160 ea269ff2e998784b66642e89ab711a3055c9cf8f SHA1 330eef95add88fed1a6631b27f8373e2219326c5 SHA256 a9b4fa8cf75550d5d970bb3d203662a3dd2398f50d22ec0bcddb009259396da9
 AUX reconfig-2 880 RMD160 eb71fbb7b086e60e648f06828353baf9b3f8bec7 SHA1 442203fc0694b9591ee21baababc697c31ad65e4 SHA256 f08ef6e1258bb64d77fbf34bad33eee2e8556580509706eb17cbd2ae079e0a29
 DIST otrs-2.4.1.tar.bz2 14213293 RMD160 dd29e167eb248c9c3401236eed1ddf43ba1b9ac3 SHA1 009728795274b007660064ef42ea1cd907136eb2 SHA256 8cf05eaa3345b8aad25335a129222dae817b3fc13c3bc0188f4026aa56fa7e8c
+DIST otrs-2.4.5.tar.bz2 14259955 RMD160 558cd14a16428ec70f6be096ada6f9f9adb4ac30 SHA1 ef4084a0b4f16239cad7673973d91d14c6cd4ba3 SHA256 6d8eafc8748cb28a301789b6a7be80809fbf943deddd0c64f3b6f8ff0bfe06d4
 EBUILD otrs-2.4.1.ebuild 3080 RMD160 12b9c5ca2958e9c9bb88867d561d0bb322670e11 SHA1 b850192c0ae339bdfd94f5b60fb4ee9959443cd2 SHA256 bb2af6f0a2cf31bbdea54eedc5e7700412e05fd736e1767a3b95e5e51795300e
-MISC ChangeLog 342 RMD160 c3e91024b4c25e1fd5a4816f2cd61544c1dc7174 SHA1 e142069d6120068bc889b2cf90725c2f4102c7b9 SHA256 3f913a8c510e4fad1a54fbd8cbca048931ca8b5b760bd4a4e9422a5037570779
+EBUILD otrs-2.4.5.ebuild 3069 RMD160 c0a0b36f5874a2dacdcc3bec89361dc53107eba6 SHA1 888339d24dc22d9b5d223b610e1c7f52ab5eea9a SHA256 790d02fe97fdb123aa92ea87e02949eb99d7e7bb310f6a6f9682f939e8d43b70
+MISC ChangeLog 456 RMD160 9bf995b806cfc5f740576968154513e3622600c7 SHA1 0e6c43127ec4372aaf2bdccf8a884e8c1ad72c16 SHA256 d22ab61d36280775fd69b8e545a9f22ee164ed745b5360129ace9e0e3738e8e6
 MISC metadata.xml 163 RMD160 2702ca9fabf7d46a5f20d0ecdff3f034e2fb6825 SHA1 b02f91b985b30647c767491550d384359e711348 SHA256 6d649396934834a6f17248ecc07bbc2df37910b2b441eda6f3f61cbc2fa36dd9
